---------------------------------------------------------------------------------------------------
Version: 2.1.1
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.1.0
Date: 2025-06-11
  Changes:
    - Triangle inequality filtering is now more strict. Edges are removed post-generation if they reduce the shortest route between 'from' and 'to' by no more than 5%.
    - Fixed a rounding error in the triangle inequality filtering calculation.
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2025-06-06
  Changes:
    - Switched from polar-space triangulation to real-space triangulation. Although this can cause a rare inaccuracy, it means paths will cross the north axis which is preferable. This is a potentially breaking change for saves in that a few space routes may adjust.
  Bugfixes:
    - Corrected the length formula for axis-crossing paths. (Thanks boomshroom!)
---------------------------------------------------------------------------------------------------
Version: 1.4.4
Date: 2025-06-05
  Bugfixes:
    - Fixed a crash related to asteroid chunks.
---------------------------------------------------------------------------------------------------
Version: 1.4.0
Date: 2025-06-05
  Changes:
    - Improved the asteroids on newly generated routes. Redrawn Space Connections will now examine the asteroids in orbit of each planet and use them to construct asteroids on the route. Thanks to AnotherZach for collaborating on this.
---------------------------------------------------------------------------------------------------
Version: 1.3.10
Date: 2025-03-22
  Changes:
    - Fixed PlanetsLib version.
---------------------------------------------------------------------------------------------------
Version: 1.3.9
Date: 2025-03-22
  Changes:
    - PlanetsLib version bump.