@@ -2,6 +2,7 @@
 Version: 2.1.1
 Date: ????
   Changes:
+    - Connections are flipped back-to-front if that would make the PlanetsLib tiers in the direction of the route increasing. (For example, Nauvis–Aquilo is now preferred to Aquilo–Nauvis.)
 ---------------------------------------------------------------------------------------------------
 Version: 2.1.0
 Date: 2025-06-11
